update sold for product entity and fix handle product api correctly