@@ -1,33 +1,27 @@
 package com.bkeuty.order.service.admin;
 
-import com.bkeuty.order.dto.admin.AdminOrderDto;
-import com.bkeuty.order.dto.cart.AddToCartResponseDto;
-import com.bkeuty.order.dto.cart.ProductVariantDto;
-import com.bkeuty.order.entity.Order;
-import com.bkeuty.order.entity.OrderItem;
-import com.bkeuty.order.enums.PaymentStatus;
-import com.bkeuty.order.repository.OrderItemRepository;
-import com.bkeuty.order.repository.OrderRepository;
-import jakarta.persistence.criteria.Predicate;
-import org.springframework.core.ParameterizedTypeReference;
+import java.math.BigDecimal;
+import java.time.LocalDate;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Locale;
+import java.util.stream.Collectors;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.reactive.function.client.WebClient;
 import org.springframework.web.server.ResponseStatusException;
-
+import com.bkeuty.order.dto.admin.AdminOrderDto;
+import com.bkeuty.order.dto.cart.AddToCartResponseDto;
+import com.bkeuty.order.entity.Order;
+import com.bkeuty.order.enums.PaymentStatus;
+import com.bkeuty.order.repository.OrderItemRepository;
+import com.bkeuty.order.repository.OrderRepository;
+import jakarta.persistence.criteria.Predicate;
 import lombok.extern.slf4j.Slf4j;
-import java.math.BigDecimal;
-import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Locale;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -36,35 +30,36 @@ public class AdminOrderService {
 
     private final OrderRepository orderRepository;
     private final OrderItemRepository orderItemRepository;
-    private final WebClient productWebClient;
 
-    public AdminOrderService(OrderRepository orderRepository, OrderItemRepository orderItemRepository, WebClient productWebClient) {
+    public AdminOrderService(OrderRepository orderRepository, OrderItemRepository orderItemRepository) {
         this.orderRepository = orderRepository;
         this.orderItemRepository = orderItemRepository;
-        this.productWebClient = productWebClient;
     }
 
     public Page<AdminOrderDto> getAllOrders(Pageable pageable, String status, LocalDate startDate, LocalDate endDate) {
         Specification<Order> spec = (root, query, criteriaBuilder) -> {
             List<Predicate> predicates = new ArrayList<>();
-            
+
             if (status != null && !status.isBlank()) {
                 String trimmedStatus = status.trim();
                 try {
-                    predicates.add(criteriaBuilder.equal(root.get("status"), PaymentStatus.valueOf(trimmedStatus.toUpperCase(Locale.ROOT))));
+                    predicates.add(criteriaBuilder.equal(root.get("status"), 
+                        PaymentStatus.valueOf(trimmedStatus.toUpperCase(Locale.ROOT))));
                 } catch (IllegalArgumentException e) {
-                    throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Invalid order status: " + trimmedStatus + ". Allowed values: " + java.util.Arrays.toString(PaymentStatus.values()));
+                    throw new ResponseStatusException(HttpStatus.BAD_REQUEST, 
+                        "Invalid order status: " + trimmedStatus + ". Allowed values: " + 
+                        java.util.Arrays.toString(PaymentStatus.values()));
                 }
             }
-            
+
             if (startDate != null) {
                 predicates.add(criteriaBuilder.greaterThanOrEqualTo(root.get("orderDate"), startDate));
             }
-            
+
             if (endDate != null) {
                 predicates.add(criteriaBuilder.lessThanOrEqualTo(root.get("orderDate"), endDate));
             }
-            
+
             return criteriaBuilder.and(predicates.toArray(new Predicate[0]));
         };
 
@@ -73,35 +68,24 @@ public class AdminOrderService {
             return Page.empty(pageable);
         }
 
-        List<Integer> orderIds = orderPage.stream().map(Order::getId).toList();
-        List<OrderItem> allOrderItems = orderItemRepository.findByOrderIdIn(orderIds);
-        List<Integer> variantIds = allOrderItems.stream().map(OrderItem::getProductVariantId).distinct().toList();
+        List<AdminOrderDto> adminOrderDtos = orderPage.getContent().stream()
+                .map(this::toAdminOrderDto)
+                .collect(Collectors.toList());
 
-        Map<Integer, ProductVariantDto> productVariants = fetchVariantMap(variantIds);
-
-        Map<Integer, List<OrderItem>> itemsByOrderId = allOrderItems.stream()
-                .collect(Collectors.groupingBy(item -> item.getOrder().getId()));
-
-        return orderPage.map(order -> {
-            List<OrderItem> itemsForOrder = itemsByOrderId.getOrDefault(order.getId(), Collections.emptyList());
-            return toAdminOrderDto(order, itemsForOrder, productVariants);
-        });
+        return new PageImpl<>(adminOrderDtos, pageable, orderPage.getTotalElements());
     }
 
     public AdminOrderDto getOrderById(Integer orderId) {
         Order order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Order not found with ID: " + orderId));
-
-        List<OrderItem> items = orderItemRepository.findByOrderId(order.getId());
-        List<Integer> variantIds = items.stream().map(OrderItem::getProductVariantId).distinct().toList();
-        Map<Integer, ProductVariantDto> productVariants = fetchVariantMap(variantIds);
-
-        return toAdminOrderDto(order, items, productVariants);
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, 
+                    "Order not found with ID: " + orderId));
+        return toAdminOrderDto(order);
     }
 
     public AdminOrderDto updateOrderStatus(Integer orderId, String status) {
         Order order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Order not found with ID: " + orderId));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, 
+                    "Order not found with ID: " + orderId));
 
         if (status == null || status.isBlank()) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Status cannot be null or blank");
@@ -110,68 +94,40 @@ public class AdminOrderService {
         try {
             order.setStatus(PaymentStatus.valueOf(status.trim().toUpperCase(Locale.ROOT)));
         } catch (IllegalArgumentException e) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Invalid order status: " + status + ". Allowed values: " + java.util.Arrays.toString(PaymentStatus.values()));
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, 
+                "Invalid order status: " + status + ". Allowed values: " + 
+                java.util.Arrays.toString(PaymentStatus.values()));
         }
+
         Order savedOrder = orderRepository.save(order);
-
-        AdminOrderDto dto = new AdminOrderDto();
-        dto.setId(savedOrder.getId());
-        dto.setUserId(savedOrder.getUserId());
-        dto.setUserName(savedOrder.getUserName());
-        dto.setTotal(savedOrder.getTotal());
-        dto.setShippingFee(savedOrder.getShippingFee());
-        dto.setOrderDate(savedOrder.getOrderDate());
-        dto.setStatus(savedOrder.getStatus() != null ? savedOrder.getStatus().name() : PaymentStatus.UNPAID.name());
-
-        return dto;
+        return toAdminOrderDto(savedOrder);
     }
 
-    private Map<Integer, ProductVariantDto> fetchVariantMap(List<Integer> variantIds) {
-        if (variantIds == null || variantIds.isEmpty()) return Collections.emptyMap();
-        try {
-            Map<Integer, ProductVariantDto> result = productWebClient.post()
-                    .uri("/api/product/internal/variants/batch")
-                    .bodyValue(variantIds)
-                    .retrieve()
-                    .bodyToMono(new ParameterizedTypeReference<Map<Integer, ProductVariantDto>>() {})
-                    .block();
-            return result != null ? result : Collections.emptyMap();
-        } catch (Exception e) {
-            log.error("Failed to fetch product variants from product-service for IDs: {}", variantIds, e);
-            return Collections.emptyMap();
-        }
-    }
+    private AdminOrderDto toAdminOrderDto(Order order) {
+        List<AddToCartResponseDto> itemDtos = order.getOrderItems() != null ?
+                order.getOrderItems().stream()
+                    .map(item -> AddToCartResponseDto.builder()
+                        .productVariantId(item.getProductVariantId())
+                        .productVariantName(item.getProductVariantName())
+                        .productVariantImage(item.getProductImageUrl())
+                        .price(item.getPrice())
+                        .promotionPrice(item.getPromotionPrice())
+                        .quantity(item.getQuantity())
+                        .build())
+                    .collect(Collectors.toList())
+                : new ArrayList<>();
 
-    private AdminOrderDto toAdminOrderDto(Order order, List<OrderItem> items, Map<Integer, ProductVariantDto> productVariants) {
-        List<AddToCartResponseDto> itemDtos = new ArrayList<>();
-        List<OrderItem> safeItems = items != null ? items : Collections.emptyList();
-        for (OrderItem item : safeItems) {
-            AddToCartResponseDto dto = new AddToCartResponseDto();
-            dto.setProductVariantId(item.getProductVariantId());
-            dto.setQuantity(item.getQuantity());
-
-            if (productVariants != null && productVariants.containsKey(item.getProductVariantId())) {
-                ProductVariantDto variant = productVariants.get(item.getProductVariantId());
-                dto.setProductVariantName(variant.getProductVariantName());
-                dto.setProductVariantImage(variant.getProductImageUrl());
-                dto.setPrice(variant.getPrice());
-                dto.setPromotionPrice(variant.getPromotionPrice());
-            }
-            itemDtos.add(dto);
-        }
-
-        AdminOrderDto adminOrderDto = new AdminOrderDto();
-        adminOrderDto.setId(order.getId());
-        adminOrderDto.setUserId(order.getUserId());
-        adminOrderDto.setUserName(order.getUserName());
-        adminOrderDto.setTotal(order.getTotal() != null ? order.getTotal() : BigDecimal.ZERO);
-        adminOrderDto.setShippingFee(order.getShippingFee());
-        adminOrderDto.setPaymentMethod(order.getPaymentMethod());
-        adminOrderDto.setOrderDate(order.getOrderDate() != null ? order.getOrderDate() : LocalDate.now());
-        adminOrderDto.setAddress(order.getAddress());
-        adminOrderDto.setStatus(order.getStatus() != null ? order.getStatus().name() : PaymentStatus.UNPAID.name());
-        adminOrderDto.setItems(itemDtos);
-
-        return adminOrderDto;
+        return AdminOrderDto.builder()
+                .id(order.getId())
+                .userId(order.getUserId())
+                .userName(order.getUserName())
+                .total(order.getTotal() != null ? order.getTotal() : BigDecimal.ZERO)
+                .shippingFee(order.getShippingFee())
+                .paymentMethod(order.getPaymentMethod())
+                .orderDate(order.getOrderDate() != null ? order.getOrderDate() : LocalDate.now())
+                .address(order.getAddress())
+                .status(order.getStatus() != null ? order.getStatus().name() : PaymentStatus.UNPAID.name())
+                .items(itemDtos)
+                .build();
     }
 }
