@@ -1,21 +1,13 @@
 package com.bkeuty.order.service.order;
 
-import com.bkeuty.order.dto.auth.TokenValidationResponseDto;
-import com.bkeuty.order.dto.cart.AddToCartResponseDto;
-import com.bkeuty.order.dto.cart.ProductVariantDto;
-import com.bkeuty.order.dto.order.*;
-import com.bkeuty.order.dto.shipping.*;
-import com.bkeuty.order.entity.CartItem;
-import com.bkeuty.order.entity.Order;
-import com.bkeuty.order.entity.OrderItem;
-import com.bkeuty.order.enums.PaymentStatus;
-import com.bkeuty.order.exception.CartItemNotFound;
-import com.bkeuty.order.microservicecommunication.GHNCommunication;
-import com.bkeuty.order.repository.CartItemRepository;
-import com.bkeuty.order.repository.OrderItemRepository;
-import com.bkeuty.order.repository.OrderRepository;
-import com.bkeuty.order.service.shipping.ShippingService;
-import jakarta.persistence.criteria.Predicate;
+import java.math.BigDecimal;
+import java.time.LocalDate;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.data.domain.Page;
@@ -29,16 +21,33 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.reactive.function.client.WebClient;
 import org.springframework.web.reactive.function.client.WebClientResponseException;
 import org.springframework.web.server.ResponseStatusException;
+import com.bkeuty.order.dto.auth.TokenValidationResponseDto;
+import com.bkeuty.order.dto.cart.AddToCartResponseDto;
+import com.bkeuty.order.dto.cart.ProductVariantDto;
+import com.bkeuty.order.dto.order.DecreaseStockRequestDto;
+import com.bkeuty.order.dto.order.DecreaseStockResponseDto;
+import com.bkeuty.order.dto.order.OrderCartItemDto;
+import com.bkeuty.order.dto.order.OrderItemDto;
+import com.bkeuty.order.dto.order.OrderResponseDto;
+import com.bkeuty.order.dto.order.PlaceOrderRequestDto;
+import com.bkeuty.order.dto.shipping.AddressDto;
+import com.bkeuty.order.dto.shipping.CalShippingFeeDto;
+import com.bkeuty.order.dto.shipping.CalShippingTimeDto;
+import com.bkeuty.order.dto.shipping.DistrictDto;
+import com.bkeuty.order.dto.shipping.ProvinceDto;
+import com.bkeuty.order.dto.shipping.WardDto;
+import com.bkeuty.order.entity.CartItem;
+import com.bkeuty.order.entity.Order;
+import com.bkeuty.order.entity.OrderItem;
+import com.bkeuty.order.enums.PaymentStatus;
+import com.bkeuty.order.exception.CartItemNotFound;
+import com.bkeuty.order.microservicecommunication.GHNCommunication;
+import com.bkeuty.order.repository.CartItemRepository;
+import com.bkeuty.order.repository.OrderItemRepository;
+import com.bkeuty.order.repository.OrderRepository;
+import com.bkeuty.order.service.shipping.ShippingService;
+import jakarta.persistence.criteria.Predicate;
 import lombok.extern.slf4j.Slf4j;
-
-import java.math.BigDecimal;
-import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Locale;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -69,8 +78,9 @@ public class OrderService {
         if (orderItemList == null || orderItemList.isEmpty()) {
             return ResponseEntity.badRequest().body("Order items cannot be empty");
         }
-        Integer shippingFee = shippingService.calShippingFee(CalShippingFeeDto.builder().toWardCode(request.getAddress().getWard().getWardCode().toString())
-                                                                                                                               .toDistrictId(request.getAddress().getDistrict().getDistrictID())
+        Integer shippingFee = shippingService.calShippingFee(CalShippingFeeDto.builder()
+                .toWardCode(request.getAddress().getWard().getWardCode().toString())
+                .toDistrictId(request.getAddress().getDistrict().getDistrictID())
                 .serviceTypeId(2).weight(100).build())
                 .block().getData().getServiceFee();
 
@@ -79,13 +89,14 @@ public class OrderService {
         String userName = (lastName + " " + firstName).trim();
         if (userName.isEmpty()) userName = "Guest";
 
-        String shippingDate = shippingService.calShippingTime(CalShippingTimeDto.builder().toWardCode(request.getAddress().getWard().getWardCode().toString())
-                .toDistrictId(request.getAddress().getDistrict().getDistrictID()).serviceTypeId(2).build()).block().getData().getLeaderTimeOrder().getToEstimateTime();
+        String shippingDate = shippingService.calShippingTime(CalShippingTimeDto.builder()
+                .toWardCode(request.getAddress().getWard().getWardCode().toString())
+                .toDistrictId(request.getAddress().getDistrict().getDistrictID()).serviceTypeId(2).build())
+                .block().getData().getLeaderTimeOrder().getToEstimateTime();
         Order order = Order.builder()
                 .orderDate(LocalDate.now())
                 .address(addressDtoToAddress(request.getAddress()))
                 .paymentMethod(request.getPaymentMethod())
-                .shippingFee(request.getShippingFee())
                 .userId(userInfo.getUserId())
                 .userName(userName)
                 .shippingFee(BigDecimal.valueOf(shippingFee))
@@ -97,56 +108,74 @@ public class OrderService {
         BigDecimal totalAmount = BigDecimal.ZERO;
         List<OrderItemDto> decreaseVariants = new ArrayList<>();
         List<AddToCartResponseDto> items = new ArrayList<>();
-
-        for (OrderCartItemDto orderCartItemDto : orderItemList) {
-            CartItem cartItems = cartItemRepository.findById(orderCartItemDto.getCartItemId())
-                    .orElseThrow(() -> new CartItemNotFound("Cart item not found", orderCartItemDto.getCartItemId()));
-            
-            decreaseVariants.add(new OrderItemDto(cartItems.getProductVariant(), cartItems.getQuantity()));
-            
-            OrderItem orderItem = new OrderItem();
-            orderItem.setOrder(orderSave);
-            orderItem.setProductVariantId(cartItems.getProductVariant());
-            orderItem.setQuantity(cartItems.getQuantity());
-            
-            cartItemRepository.delete(cartItems);
-            orderItemRepository.save(orderItem);
+        List<OrderItem> orderItemsToSave = new ArrayList<>();
+        List<Integer> variantIds = new ArrayList<>();
+        for (OrderCartItemDto cartItemDto : orderItemList) {
+            CartItem cartItem = cartItemRepository.findById(cartItemDto.getCartItemId())
+                    .orElseThrow(() -> new CartItemNotFound("Cart item not found", cartItemDto.getCartItemId()));
+            variantIds.add(cartItem.getProductVariant());
+            decreaseVariants.add(new OrderItemDto(cartItem.getProductVariant(), cartItem.getQuantity()));
         }
 
+        Map<Integer, ProductVariantDto> variants = fetchVariantMap(variantIds);
+
+        for (OrderCartItemDto cartItemDto : orderItemList) {
+            CartItem cartItem = cartItemRepository.findById(cartItemDto.getCartItemId())
+                    .orElseThrow(() -> new CartItemNotFound("Cart item not found", cartItemDto.getCartItemId()));
+
+            ProductVariantDto variantDto = variants.get(cartItem.getProductVariant());
+            if (variantDto == null) {
+                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, 
+                    "Product variant not found: " + cartItem.getProductVariant());
+            }
+
+            OrderItem orderItem = OrderItem.builder()
+                    .order(orderSave)
+                    .productVariantId(cartItem.getProductVariant())
+                    .productVariantName(variantDto.getProductVariantName())
+                    .productImageUrl(variantDto.getProductImageUrl())
+                    .price(variantDto.getPrice())
+                    .promotionPrice(variantDto.getPromotionPrice())
+                    .productDescription(variantDto.getProductVariantDescription())
+                    .quantity(cartItem.getQuantity())
+                    .isReviewed(false)
+                    .build();
+
+            orderItemsToSave.add(orderItem);
+            cartItemRepository.delete(cartItem);
+
+            BigDecimal effectivePrice = variantDto.getPromotionPrice() != null && 
+                    variantDto.getPromotionPrice().compareTo(variantDto.getPrice()) < 0
+                    ? variantDto.getPromotionPrice() 
+                    : variantDto.getPrice();
+            totalAmount = totalAmount.add(effectivePrice.multiply(BigDecimal.valueOf(cartItem.getQuantity())));
+
+            AddToCartResponseDto itemDto = AddToCartResponseDto.builder()
+                    .productVariantId(variantDto.getId())
+                    .productVariantName(variantDto.getProductVariantName())
+                    .productVariantImage(variantDto.getProductImageUrl())
+                    .price(variantDto.getPrice())
+                    .promotionPrice(variantDto.getPromotionPrice())
+                    .quantity(cartItem.getQuantity())
+                    .build();
+            items.add(itemDto);
+        }
+
+        orderItemRepository.saveAll(orderItemsToSave);
+
         try {
-            List<DecreaseStockResponseDto> decreaseStockResponseDtos = productWebClient.post()
+            productWebClient.post()
                     .uri("/api/inventory/internal/decreaseStock")
                     .bodyValue(new DecreaseStockRequestDto(decreaseVariants))
                     .retrieve()
                     .bodyToMono(new ParameterizedTypeReference<List<DecreaseStockResponseDto>>() {})
                     .block();
-
-            if (decreaseStockResponseDtos != null) {
-                for (DecreaseStockResponseDto dto : decreaseStockResponseDtos) {
-                    AddToCartResponseDto addToCartResponseDTO = AddToCartResponseDto.builder()
-                            .price(dto.getPrice())
-                            .productVariantId(dto.getProductVariantId())
-                            .productVariantName(dto.getProductVariantName())
-                            .quantity(dto.getQuantity())
-                            .productVariantImage(dto.getProductVariantImage())
-                            .promotionPrice(dto.getPromotionPrice())
-                            .build();
-
-                    if (dto.getPrice() != null && dto.getQuantity() != null) {
-                        if(dto.getPromotionPrice() == null){
-                            totalAmount = totalAmount.add(dto.getPrice().multiply(BigDecimal.valueOf(dto.getQuantity())));
-                        }
-                        else {
-                            totalAmount = totalAmount.add(dto.getPromotionPrice().multiply(BigDecimal.valueOf(dto.getQuantity())));
-                        }
-                    }
-                    items.add(addToCartResponseDTO);
-                }
-            }
         } catch (WebClientResponseException e) {
-            throw new RuntimeException("Failed to communicate with inventory service: " + e.getResponseBodyAsString());
+            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR,
+                    "Failed to update inventory: " + e.getResponseBodyAsString());
         } catch (Exception e) {
-            throw new RuntimeException("Internal error processing stock: " + e.getMessage());
+            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, 
+                    "Internal error processing stock: " + e.getMessage());
         }
 
         if (request.getShippingFee() != null) {
@@ -154,20 +183,20 @@ public class OrderService {
         }
         orderSave.setTotal(totalAmount);
         orderRepository.save(orderSave);
-        
-        OrderResponseDto placeOrderResponseDTO = new OrderResponseDto();
-        placeOrderResponseDTO.setOrderId(orderSave.getId().toString());
-        placeOrderResponseDTO.setOrderDate(LocalDate.now());
-        placeOrderResponseDTO.setShippingFee(BigDecimal.valueOf(shippingFee));
-        placeOrderResponseDTO.setEstShippingDate(shippingDate);
-        placeOrderResponseDTO.setAddress(request.getAddress());
-        placeOrderResponseDTO.setPaymentMethod(request.getPaymentMethod());
-        placeOrderResponseDTO.setTotal(totalAmount);
-        placeOrderResponseDTO.setItems(items);
-        placeOrderResponseDTO.setStatus(PaymentStatus.UNPAID.name());
-        placeOrderResponseDTO.setQrCodeLink(generateQrCode(totalAmount.add(BigDecimal.valueOf(shippingFee)), orderSave.getId()));
-        
-        return ResponseEntity.ok(placeOrderResponseDTO);
+        OrderResponseDto response = OrderResponseDto.builder()
+                .orderId(orderSave.getId().toString())
+                .orderDate(LocalDate.now())
+                .shippingFee(BigDecimal.valueOf(shippingFee))
+                .estShippingDate(shippingDate)
+                .address(request.getAddress())
+                .paymentMethod(request.getPaymentMethod())
+                .total(totalAmount)
+                .items(items)
+                .status(PaymentStatus.UNPAID.name())
+                .qrCodeLink(generateQrCode(totalAmount, orderSave.getId()))
+                .build();
+
+        return ResponseEntity.ok(response);
     }
 
     private String generateQrCode(BigDecimal total, Integer orderId) {
@@ -179,7 +208,6 @@ public class OrderService {
         Specification<Order> spec = (root, query, criteriaBuilder) -> {
             List<Predicate> predicates = new ArrayList<>();
             predicates.add(criteriaBuilder.equal(root.get("userId"), userId));
-            
             if (status != null && !status.isBlank()) {
                 String trimmedStatus = status.trim();
                 try {
@@ -188,15 +216,12 @@ public class OrderService {
                     throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Invalid order status: " + trimmedStatus + ". Allowed values: " + java.util.Arrays.toString(PaymentStatus.values()));
                 }
             }
-            
             if (startDate != null) {
                 predicates.add(criteriaBuilder.greaterThanOrEqualTo(root.get("orderDate"), startDate));
             }
-            
             if (endDate != null) {
                 predicates.add(criteriaBuilder.lessThanOrEqualTo(root.get("orderDate"), endDate));
             }
-            
             return criteriaBuilder.and(predicates.toArray(new Predicate[0]));
         };
 
@@ -205,19 +230,38 @@ public class OrderService {
             return Page.empty(pageable);
         }
 
-        List<Integer> orderIds = pageOrders.stream().map(Order::getId).toList();
-        List<OrderItem> allOrderItems = orderItemRepository.findByOrderIdIn(orderIds);
-        List<Integer> variantIds = allOrderItems.stream().map(OrderItem::getProductVariantId).distinct().toList();
-        Map<Integer, ProductVariantDto> productVariants = fetchVariantMap(variantIds);
+        List<OrderResponseDto> orderResponseList = pageOrders.getContent().stream()
+                .map(this::toOrderResponseDto)
+                .collect(Collectors.toList());
+        return new PageImpl<>(orderResponseList, pageable, pageOrders.getTotalElements());
+    }
 
-        Map<Integer, List<OrderItem>> itemsByOrderId = allOrderItems.stream()
-                .collect(Collectors.groupingBy(item -> item.getOrder().getId()));
+    public OrderResponseDto toOrderResponseDto(Order order) {
+        OrderResponseDto response = new OrderResponseDto();
+        response.setOrderId(order.getId() != null ? order.getId().toString() : "");
+        response.setUserName(order.getUserName());
+        response.setOrderDate(order.getOrderDate() != null ? order.getOrderDate() : LocalDate.now());
+        response.setAddress(toAddressDto(order.getAddress()));
+        response.setPaymentMethod(order.getPaymentMethod());
+        response.setTotal(order.getTotal() != null ? order.getTotal() : BigDecimal.ZERO);
+        response.setStatus(order.getStatus() != null ? order.getStatus().name() : PaymentStatus.UNPAID.name());
+        response.setShippingFee(order.getShippingFee());
 
-        List<OrderResponseDto> orderResponseDTOList = pageOrders.getContent().stream()
-                .map(order -> toOrderResponseDto(order, itemsByOrderId.getOrDefault(order.getId(), Collections.emptyList()), productVariants))
-                .toList();
-        
-        return new PageImpl<>(orderResponseDTOList, pageable, pageOrders.getTotalElements());
+        List<AddToCartResponseDto> itemDtos = order.getOrderItems() != null ?
+                order.getOrderItems().stream()
+                    .map(item -> AddToCartResponseDto.builder()
+                        .productVariantId(item.getProductVariantId())
+                        .productVariantName(item.getProductVariantName())
+                        .productVariantImage(item.getProductImageUrl())
+                        .price(item.getPrice())
+                        .promotionPrice(item.getPromotionPrice())
+                        .quantity(item.getQuantity())
+                        .build())
+                    .collect(Collectors.toList())
+                : new ArrayList<>();
+
+        response.setItems(itemDtos);
+        return response;
     }
 
     public OrderResponseDto toOrderResponseDto(Order order, List<OrderItem> items, Map<Integer, ProductVariantDto> productVariants) {
@@ -256,6 +300,11 @@ public class OrderService {
                 addToCartResponseDTO.setProductVariantImage(productVariant.getProductImageUrl());
                 addToCartResponseDTO.setPrice(productVariant.getPrice());
                 addToCartResponseDTO.setPromotionPrice(productVariant.getPromotionPrice());
+            } else {
+                addToCartResponseDTO.setProductVariantName(orderItems.getProductVariantName());
+                addToCartResponseDTO.setProductVariantImage(orderItems.getProductImageUrl());
+                addToCartResponseDTO.setPrice(orderItems.getPrice());
+                addToCartResponseDTO.setPromotionPrice(orderItems.getPromotionPrice());
             }
             itemList.add(addToCartResponseDTO);
         }
